tests/invalid/strings/invalid_escape_code.rs
/*
compilationExitCode: 2
*/

main(): i32{
    string: [i8, 20] = "Hello, World!\q";
    return 0;
}